@@ -1,3 +1,7 @@
+2011-08-16  Ken Brown  <kbrown@cornell.edu>
+
+	* gmalloc.c: Expand comment.
+
 2011-08-16  Eli Zaretskii  <eliz@gnu.org>
 
 	* xdisp.c (set_cursor_from_row): Don't accept a previous candidate
